-added styling to bin page -added styling to user page -added styling to task -bugfix -added styling to field page -added styling to graph page -added Icon -Updated Icon -bugfix -general UI spacing

--- a/src/main/resources/task.css
+++ b/src/main/resources/task.css
@@ -30,7 +30,9 @@
     -fx-alignment: CENTER;
 }
 
-
+.label {
+    -fx-alignment: CENTER;
+}
 .page-label {
     -fx-font-family: "Quicksand", sans-serif;
     -fx-font-size: 28px;
@@ -38,6 +40,8 @@
     -fx-text-fill: #3498db;
     -fx-padding: 10 0;
 }
+
+
 
 
 .function-bar {
